--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 justify-content-center">
-                <h1 id="name">Bharosha Krishi Bahuudesiya</h1>
+                <h1 id="name">भरोसा कृषि बहुउद्‍देश्यीय</h1>
         <p id="tagline">We are promoting organic agricultue in Nepal.</p>
         <a href="#product" id="chito-plus"><i class="fa fa-angle-down"></i> Chito Plus</a>
             </div>
