--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Bharosha Krishi Bahuudesiya Pvt. Ltd.Tokha-11, Kathmandu, Bagmati, Nepal​">
+    <meta name="keywords" content="Bharosha Krishi Bahuudesiya">
     <meta name="description" content="">
     <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
