--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Bharosha Krishi Bahuudesiya Pvt. Ltd.Tokha-11, Kathmandu, Bagmati, Nepal​">
+    <meta name="keywords" content="Bharosha Krishi Bahuudesiya Pvt. Ltd.​">
     <meta name="description" content="">
     <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -17,7 +17,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "",
+		"name": "bharosha krishi",
 		"logo": "images/logo.jpg"
 }</script>
     <meta name="theme-color" content="#478ac9">
@@ -58,12 +58,11 @@
           </div>
         </nav>
         <h1 class="u-text u-text-custom-color-1 u-text-default u-text-1">Bharosha Krishi Bahuudesiya Pvt. Ltd.<br>
-          <span style="font-size: 1.5rem;">Tokha-11, Kathmandu, Bagmati, Nepal </span>
         </h1>
       </div></header>
     <section class="u-clearfix u-palette-1-light-1 u-section-1" id="sec-7e60">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width u-image u-image-default u-image-1" src="images/IMG_20230821_204650.jpg" alt="" data-image-width="1080" data-image-height="654">
+        <img class="u-expanded-width u-image u-image-default u-image-1" src="images/normal.jpg" alt="" data-image-width="1080" data-image-height="654">
       </div>
     </section>
     <style class="u-overlap-style">.u-overlap:not(.u-sticky-scroll) .u-header {
@@ -73,7 +72,7 @@ transparency: 30 !important
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-282a"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Copy Rights registered of Bharosha Krishi Bahuudesiya Pvt. Ltd,</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Copy Rights © registered of Bharosha Krishi Bahuudesiya Pvt. Ltd.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
