--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en"><header class="u-box-shadow u-clearfix u-header u-header" id="sec-6133" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://bharoshakrishi.com.np" class="u-image u-logo u-image-1" data-image-width="384" data-image-height="372">
-          <img src="images/contact.jpg" class="u-logo-image u-logo-image-1">
+          <img src="images/logo.jpg" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1.5rem; letter-spacing: 0px; font-weight: 700;">
