--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Bharosha Krishi Bahuudesiya Pvt. Ltd.​">
+    <meta name="keywords" content="भरोसा कृषि बहुउद्‍देश्यीय प्रा. लि.">
     <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
@@ -71,7 +71,7 @@ transparency: 30 !important
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-282a"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Copy Rights © registered of Bharosha Krishi Bahuudesiya Pvt. Ltd.</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Copy Rights © registered of भरोसा कृषि बहुउद्‍देश्यीय प्रा. लि.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
