--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Bharosha Krishi Bahuudesiya">
+    <meta name="keywords" content="भरोसा कृषि बहुउद्‍देश्यीय प्रा. लि.">
     <meta name="description" content="">
     <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -17,7 +17,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "",
+		"name": "bharosha krishi",
 		"logo": "images/logo.jpg"
 }</script>
     <meta name="theme-color" content="#478ac9">
@@ -57,7 +57,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <h1 class="u-text u-text-custom-color-1 u-text-default u-text-1">Bharosha Krishi Bahuudesiya Pvt. Ltd.<br>
+        <h1 class="u-text u-text-custom-color-1 u-text-default u-text-1">भरोसा कृषि बहुउद्‍देश्यीय प्रा. लि.<br>
         </h1>
       </div></header>
     <section class="u-clearfix u-palette-1-light-1 u-section-1" id="sec-7e60">
@@ -72,7 +72,7 @@ transparency: 30 !important
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-282a"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Copy Rights © registered of Bharosha Krishi Bahuudesiya Pvt. Ltd,</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Copy Rights © registered of भरोसा कृषि बहुउद्‍देश्यीय प्रा. लि.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
