--- a/Home.html
+++ b/Home.html
@@ -17,7 +17,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "bharosha krishi",
-		"logo": "images/logo.jpg"
+		"logo": "images/mainlogo.jpg"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Home">
@@ -25,7 +25,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en"><header class="u-box-shadow u-clearfix u-header u-header" id="sec-6133" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://bharoshakrishi.com.np" class="u-image u-logo u-image-1" data-image-width="384" data-image-height="372">
-          <img src="images/logo.jpg" class="u-logo-image u-logo-image-1">
+          <img src="images/mainlogo.jpg" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1.5rem; letter-spacing: 0px; font-weight: 700;">
@@ -56,7 +56,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <h1 class="u-text u-text-custom-color-1 u-text-default u-text-1">Bharosha Krishi Bahuudesiya Pvt. Ltd.<br>
+        <h1 class="u-text u-text-custom-color-1 u-text-default u-text-1">भरोसा कृषि बहुउद्‍देश्यीय प्रा. लि.<br>
         </h1>
       </div></header>
     <section class="u-clearfix u-palette-1-light-1 u-section-1" id="sec-7e60">
