--- a/Contact.html
+++ b/Contact.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Bharosha Krishi Bahuudesiya Pvt. Ltd.Tokha-11, Kathmandu, Bagmati, Nepal​">
+    <meta name="keywords" content="भरोसा कृषि बहुउद्‍देश्यीय प्रा. लि.​">
     <meta name="description" content="">
     <title>Contact</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -18,7 +18,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/logo.jpg"
+		"logo": "images/mainlogo.jpg"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Contact">
@@ -26,7 +26,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en"><header class="u-box-shadow u-clearfix u-header u-header" id="sec-6133" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="384" data-image-height="372">
-          <img src="images/logo.jpg" class="u-logo-image u-logo-image-1">
+          <img src="images/mainlogo.jpg" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1.5rem; letter-spacing: 0px; font-weight: 700;">
@@ -57,8 +57,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <h1 class="u-text u-text-custom-color-1 u-text-default u-text-1">Bharosha Krishi Bahuudesiya Pvt. Ltd.<br>
-          <span style="font-size: 1.5rem;">Tokha-11, Kathmandu, Bagmati, Nepal </span>
+        <h1 class="u-text u-text-custom-color-1 u-text-default u-text-1">भरोसा कृषि बहुउद्‍देश्यीय प्रा. लि.<br>
         </h1>
       </div></header>
     <section class="u-clearfix u-palette-1-light-1 u-section-1" id="sec-c384">
@@ -70,7 +69,7 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-282a"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Copy Rights registered of Bharosha Krishi Bahuudesiya Pvt. Ltd,</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Copy Rights registered of भरोसा कृषि बहुउद्‍देश्यीय प्रा. लि.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
