--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en"><header class="u-box-shadow u-clearfix u-header u-header" id="sec-6133" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="384" data-image-height="372">
+        <a href="https://bharoshakrishi.com.np" class="u-image u-logo u-image-1" data-image-width="384" data-image-height="372">
           <img src="images/mainlogo.jpg" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
