--- a/About.html
+++ b/About.html
@@ -62,7 +62,7 @@
       </div></header>
     <section class="u-clearfix u-palette-1-light-1 u-section-1" id="sec-8f14">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-expanded-width u-image u-image-contain u-image-default u-image-1" src="images/normal.jpg" alt="" data-image-width="1064" data-image-height="650">
+        <img class="u-expanded-width u-image u-image-contain u-image-default u-image-1" src="images/brand.jpg" alt="" data-image-width="1064" data-image-height="650">
       </div>
     </section>
     
