--- a/single.html
+++ b/single.html
@@ -81,14 +81,14 @@
 
 							<div class="collapse navbar-collapse" id="navbarSupportedContent">
 								<ul class="main-navigation">
-									<li class="menu-item active">
+									<li class="menu-item">
 										<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 									</li>
 									<li class="menu-item">
 										<a href="about.html">about</a>
 									</li>
 									<li class="menu-item">
-										<a href="products.html">products</a>
+										<a href="products.html  active">products</a>
 									</li>
 									<li class="menu-item">
 										<a href="contact.html">contact us</a>
@@ -101,110 +101,57 @@
 			</div>
 		</div>
 	</header>
-	<section class="slider-wrap">
-		<div class="slider-bg">
-			<div class="owl-carousel owl-theme" id="main-slider">
-				<div class="slide-sec">
-					<div class="slide-img">
-						<img src="assets_front/images/slider-img1.jpg">
-					</div>
-				</div>
-				<div class="slide-sec">
-					<div class="slide-img">
-						<img src="assets_front/images/slider-img2.jpg">
+	<section class="page-banner" style="background-image: url(assets_front/images/slider-img1.jpg);">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="banr-wrap">
+						<h2>Bharosa Krisi Products</h2>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="about-us">
+	<section class="single-wrap">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-lg-6">
-					<div class="abt-wrap">
-						<h3><small>about us</small> भरोसा कृषि बहुउ​​द्‍​​देश्यीय प्रा. लि.</h3>
+				<div class="col-lg-8">
+					<div class="food-dtl">
+						<h3>Dietary Feed Suppliement</h3>
+						<div class="f-price">
+							<strong>rs 1200</strong>
+						</div>
 						<p>
-							Bharosha Krishi Bahuudesiya private limited established  at 2021 in Nepal. Chitin , Chitosan  used in medical industry and farm etc. We have chitosan product for animal feed made from Chitosan. We also produce organic fertilizer made from Chitosan 100%. Our mission is produce organic product made from natural and not using any chemical. We focus on quality of product for the benefit of farmers/customers. We also have another chitosan product which is used for water treatment for better results.
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.
 						</p>
-						<div class="btn-wrap">
-							<a href="contact.html">Contact Us</a>
-						</div>
+						<ul class="ingrednt">
+							<h4>Supplement Content</h4>
+							<li>suppliment1</li>
+							<li>suppliment2</li>
+							<li>suppliment3</li>
+							<li>suppliment4</li>
+						</ul>
+						<ul class="ingrednt">
+							<h4>Advantages</h4>
+							<li>suppliment1</li>
+							<li>suppliment2</li>
+							<li>suppliment3</li>
+							<li>suppliment4</li>
+						</ul>
 					</div>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-4">
 					<div class="img-wrap">
-						<img src="assets_front/images/product33.png">
+						<img src="assets_front/images/product1.jpg">
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="products">
-		<div class="container">
-			<div class="headings">
-				<h2><span>our</span> products</h2>
-			</div>
-			<div class="row">
-				<div class="col-lg-4">
-					<div class="product-card">
-						<div class="imgp-wrap">
-							<figure>
-								<img src="assets_front/images/product1.jpg">
-							</figure>
-						</div>
-						<div class="dtls">
-							<a href="single.html">Dietary Feed suppliement</a>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-							</p>
-							<div class="btn-wrap">
-								<a href="single.html">read more</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="product-card">
-						<div class="imgp-wrap">
-							<figure>
-								<img src="assets_front/images/product2.jpg">
-							</figure>
-						</div>
-						<div class="dtls">
-							<a href="single.html">growth promoter</a>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-							</p>
-							<div class="btn-wrap">
-								<a href="single.html">read more</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="product-card">
-						<div class="imgp-wrap">
-							<figure>
-								<img src="assets_front/images/product3.jpg">
-							</figure>
-						</div>
-						<div class="dtls">
-							<a href="single.html">water treatment</a>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-							</p>
-							<div class="btn-wrap">
-								<a href="single.html">read more</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+
 	<footer>
 	    <div class="container">
 	        <div class="row align-items-center">
