--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 
 							<div class="collapse navbar-collapse" id="navbarSupportedContent">
 								<ul class="main-navigation">
-									<li class="menu-item active">
+									<li class="menu-item ">
 										<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 									</li>
 									<li class="menu-item">
@@ -90,7 +90,7 @@
 									<li class="menu-item">
 										<a href="products.html">products</a>
 									</li>
-									<li class="menu-item">
+									<li class="menu-item active">
 										<a href="contact.html">contact us</a>
 									</li>
 								</ul>
@@ -101,110 +101,60 @@
 			</div>
 		</div>
 	</header>
-	<section class="slider-wrap">
-		<div class="slider-bg">
-			<div class="owl-carousel owl-theme" id="main-slider">
-				<div class="slide-sec">
-					<div class="slide-img">
-						<img src="assets_front/images/slider-img1.jpg">
-					</div>
-				</div>
-				<div class="slide-sec">
-					<div class="slide-img">
-						<img src="assets_front/images/slider-img2.jpg">
+	<section class="page-banner" style="background-image: url(assets_front/images/slider-img1.jpg);">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="banr-wrap">
+						<h2>Contact Us</h2>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="about-us">
+	<section class="contact-wrap">
 		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-lg-6">
-					<div class="abt-wrap">
-						<h3><small>about us</small> भरोसा कृषि बहुउ​​द्‍​​देश्यीय प्रा. लि.</h3>
-						<p>
-							Bharosha Krishi Bahuudesiya private limited established  at 2021 in Nepal. Chitin , Chitosan  used in medical industry and farm etc. We have chitosan product for animal feed made from Chitosan. We also produce organic fertilizer made from Chitosan 100%. Our mission is produce organic product made from natural and not using any chemical. We focus on quality of product for the benefit of farmers/customers. We also have another chitosan product which is used for water treatment for better results.
-						</p>
-						<div class="btn-wrap">
-							<a href="contact.html">Contact Us</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="img-wrap">
-						<img src="assets_front/images/product33.png">
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="products">
-		<div class="container">
-			<div class="headings">
-				<h2><span>our</span> products</h2>
-			</div>
 			<div class="row">
 				<div class="col-lg-4">
-					<div class="product-card">
-						<div class="imgp-wrap">
-							<figure>
-								<img src="assets_front/images/product1.jpg">
-							</figure>
+					<div class="contact-box">
+						<div class="icon-wrap">
+							<span class="material-symbols-outlined">share_location</span>
 						</div>
-						<div class="dtls">
-							<a href="single.html">Dietary Feed suppliement</a>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-							</p>
-							<div class="btn-wrap">
-								<a href="single.html">read more</a>
-							</div>
+						<div class="contact-dtl">
+							<strong>Address</strong>
+							<a href="#">Tokha-11, Kathmandu, Bagmati Nepal</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4">
-					<div class="product-card">
-						<div class="imgp-wrap">
-							<figure>
-								<img src="assets_front/images/product2.jpg">
-							</figure>
+					<div class="contact-box">
+						<div class="icon-wrap">
+							<span class="material-symbols-outlined">
+							call
+							</span>
 						</div>
-						<div class="dtls">
-							<a href="single.html">growth promoter</a>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-							</p>
-							<div class="btn-wrap">
-								<a href="single.html">read more</a>
-							</div>
+						<div class="contact-dtl">
+							<strong>Phone</strong>
+							<a href="tel:+977-97663827227"><i class="material-symbols-outlined">call</i>
+							+977-9766382722</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4">
-					<div class="product-card">
-						<div class="imgp-wrap">
-							<figure>
-								<img src="assets_front/images/product3.jpg">
-							</figure>
+					<div class="contact-box">
+						<div class="icon-wrap">
+							<span class="material-symbols-outlined">mail</span>
 						</div>
-						<div class="dtls">
-							<a href="single.html">water treatment</a>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-							</p>
-							<div class="btn-wrap">
-								<a href="single.html">read more</a>
-							</div>
+						<div class="contact-dtl">
+							<strong>Email</strong>
+							<a href="mailto:bharosha.krishi2022@gmail.Com">bharosha.krishi2022@gmail.Com</a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
 	<footer>
 	    <div class="container">
 	        <div class="row align-items-center">
