--- a/products.html
+++ b/products.html
@@ -81,13 +81,13 @@
 
 							<div class="collapse navbar-collapse" id="navbarSupportedContent">
 								<ul class="main-navigation">
-									<li class="menu-item active">
+									<li class="menu-item">
 										<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 									</li>
 									<li class="menu-item">
 										<a href="about.html">about</a>
 									</li>
-									<li class="menu-item">
+									<li class="menu-item active">
 										<a href="products.html">products</a>
 									</li>
 									<li class="menu-item">
@@ -101,39 +101,12 @@
 			</div>
 		</div>
 	</header>
-	<section class="slider-wrap">
-		<div class="slider-bg">
-			<div class="owl-carousel owl-theme" id="main-slider">
-				<div class="slide-sec">
-					<div class="slide-img">
-						<img src="assets_front/images/slider-img1.jpg">
-					</div>
-				</div>
-				<div class="slide-sec">
-					<div class="slide-img">
-						<img src="assets_front/images/slider-img2.jpg">
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="about-us">
+	<section class="page-banner" style="background-image: url(assets_front/images/slider-img1.jpg);">
 		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-lg-6">
-					<div class="abt-wrap">
-						<h3><small>about us</small> भरोसा कृषि बहुउ​​द्‍​​देश्यीय प्रा. लि.</h3>
-						<p>
-							Bharosha Krishi Bahuudesiya private limited established  at 2021 in Nepal. Chitin , Chitosan  used in medical industry and farm etc. We have chitosan product for animal feed made from Chitosan. We also produce organic fertilizer made from Chitosan 100%. Our mission is produce organic product made from natural and not using any chemical. We focus on quality of product for the benefit of farmers/customers. We also have another chitosan product which is used for water treatment for better results.
-						</p>
-						<div class="btn-wrap">
-							<a href="contact.html">Contact Us</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="img-wrap">
-						<img src="assets_front/images/product33.png">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="banr-wrap">
+						<h2>Bharosa Krisi Products</h2>
 					</div>
 				</div>
 			</div>
@@ -205,6 +178,7 @@
 			</div>
 		</div>
 	</section>
+
 	<footer>
 	    <div class="container">
 	        <div class="row align-items-center">
