--- a/Home.html
+++ b/Home.html
@@ -36,7 +36,7 @@
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-border-2 u-border-palette-1-dark-2 u-clearfix u-gradient u-header u-sticky u-valign-bottom-xl u-valign-middle-lg u-valign-middle-md u-header" id="sec-2f90"><a href="Home.html" class="u-align-left u-border-2 u-border-palette-4-base u-image u-logo u-image-1" data-image-width="384" data-image-height="372" title="Home">
-        <img src="images/mainlogo.jpg?rand=8386" class="u-logo-image u-logo-image-1">
+        <img src="images/logo.jpg?rand=8386" class="u-logo-image u-logo-image-1">
       </a><p class="u-align-center u-text u-text-1"> भरोसा कृषि बहुउ​​द्‍​​देश्यीय प्रा. लि.<br>
       </p><nav class="u-align-right u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse" style="font-size: 1.5rem; letter-spacing: 0px; font-weight: 700;">
