--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@
 	<div class="copy-r">
 	    <div class="container">
 	        <div class="copy-contn">
-	            <strong>Copyright © 2023. भरोसा कृषि बहुउ​​द्‍​​देश्यीय प्रा. लि.</strong> <strong>Designed &amp; Powered By: <a href="#">Rajib Khanal</a></strong>
+	            <strong>Copyright © 2023. भरोसा कृषि बहुउ​​द्‍​​देश्यीय प्रा. लि.</strong> <strong>Designed &amp; Powered By: <a href="#">Sakril Shrestha</a></strong>
 	        </div>
 	    </div>
 	</div>
