--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 							<div class="col-lg-2 col-md-6">
 								<ul class="social-bar">
 									<li>
-										<a href="https://www.facebook.com/profile.html?id=61550313380864" target="_blank"><i class="fab fa-facebook"></i></a>
+										<a href="https://www.facebook.com/profile.php?id=61550534906127" target="_blank"><i class="fab fa-facebook"></i></a>
 										<a href="#"><i class="fab fa-instagram"></i></a>
 									</li>
 								</ul>
@@ -168,7 +168,7 @@
 	            <div class="col-lg-3 col-md-6">
 	             <ul class="social-bar">
 	                <li>
-	                    <a href="https://www.facebook.com/profile.html?id=61550313380864"><i class="fab fa-facebook"></i></a>
+	                    <a href="https://www.facebook.com/profile.php?id=61550534906127"><i class="fab fa-facebook"></i></a>
 	                    <a href="#"><i class="fab fa-instagram"></i></a>
 	                </li>
 	            </ul>
