--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
 						</div>
 						<div class="dtls">
 							<a href="single.html">growth promoter</a>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+							<p>Chito Plus is a special formula developed for the benefit of farmers and anyone who loves planting. 
+								Formulated with high concentration of our high purity food grade chitosan. It can be used with commercial crops, 
+								ornamental plants and fruit trees. It promotes disease resistance in plants and helps to condition soil.
 							</p>
 							<div class="btn-wrap">
 								<a href="single.html">read more</a>
