--- a/index.html
+++ b/index.html
@@ -155,8 +155,10 @@
 						<div class="dtls">
 							<a href="single.html">Dietary Feed suppliement</a>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								उत्पादन लागत र समयमा सुधार गर्दछ, रोग प्रतिरोध शक्ति वृद्धि, पशुपन्छी पाचन प्रणालि मजबुट बनाउँछ, 
+								रगतमा चिल्लोको मात्रा कम भई बोसो कम मांशपेशी वृद्धि, एमोनिया, 
+								नाइट्रो कम्पाउन्ड जस्ता ग्याँस वृद्धि रोक्दछ जसबाट खोरमा दुर्गन्ध कम हुन्छ, 
+								प्राणीहरुमा छरितोपन ल्याउँछ, अन्य औषधि तथा रसायनको प्रयोगबाट हुने नकारात्मक असर न्युनिकरण गर्दछ ।
 							</p>
 							<div class="btn-wrap">
 								<a href="single.html">read more</a>
@@ -173,9 +175,10 @@
 						</div>
 						<div class="dtls">
 							<a href="single.html">growth promoter</a>
-							<p>Chito Plus is a special formula developed for the benefit of farmers and anyone who loves planting. 
-								Formulated with high concentration of our high purity food grade chitosan. It can be used with commercial crops, 
-								ornamental plants and fruit trees. It promotes disease resistance in plants and helps to condition soil.
+							<p>विभिन्न मल तथा रसायनको प्रयोगबाट माटो तथा विरुवामा सुधार भएको छैन भने
+								यस chito plus को प्रयोगबाट मलखादको उपयोगितालाई विरुवा तथा माटोमा वृद्धि गर्न सकिन्छ । 
+								यसको प्रयोगबाट जुनसुकै विरुवा छिटो हुर्काउन गुणस्तरीय उत्पादन लिन, रोग प्रतिशोधात्मक क्षमता वृद्धि गर्न माटोको गुणस्तर बढाउन,
+								शत्रु जीव व्यवस्थापन गर्न, विरुवाको आन्तरिक प्रणाली दुरुस्त राख्न यसले मद्दत गर्दछ ।
 							</p>
 							<div class="btn-wrap">
 								<a href="single.html">read more</a>
