--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 						<div class="dtls">
 							<a href="single.html">growth promoter</a>
 							<p>विभिन्न मल तथा रसायनको प्रयोगबाट माटो तथा विरुवामा सुधार भएको छैन भने
-								यस chito plus को प्रयोगबाट मलखादको उपयोगितालाई विरुवा तथा माटोमा वृद्धि गर्न सकिन्छ । 
+								यस Chito Plus को प्रयोगबाट मलखादको उपयोगितालाई विरुवा तथा माटोमा वृद्धि गर्न सकिन्छ । 
 								यसको प्रयोगबाट जुनसुकै विरुवा छिटो हुर्काउन गुणस्तरीय उत्पादन लिन, रोग प्रतिशोधात्मक क्षमता वृद्धि गर्न माटोको गुणस्तर बढाउन,
 								शत्रु जीव व्यवस्थापन गर्न, विरुवाको आन्तरिक प्रणाली दुरुस्त राख्न यसले मद्दत गर्दछ ।
 							</p>
@@ -196,8 +196,9 @@
 						<div class="dtls">
 							<a href="single.html">water treatment</a>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								Chito Plus को यो उत्पादन पानीको उपचार गर्न विशेष रुपमा तयार पारिएके छ । 
+								यसले विभिन्न पानी पोखरीमा पानीको उचित तवरले वातावरणीय प्रणाली सुचारु भूमिका निभाउँदछ । 
+								प्राकृतिक रुपमा पानीलाई विना कुनै रसायनको प्रयोग यस उत्पादनले सफा गर्न सकिन्छ ।
 							</p>
 							<div class="btn-wrap">
 								<a href="single.html">read more</a>
