--- a/products.html
+++ b/products.html
@@ -128,8 +128,10 @@
 						<div class="dtls">
 							<a href="single.html">Dietary Feed suppliement</a>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								उत्पादन लागत र समयमा सुधार गर्दछ, रोग प्रतिरोध शक्ति वृद्धि, पशुपन्छी पाचन प्रणालि मजबुट बनाउँछ, 
+								रगतमा चिल्लोको मात्रा कम भई बोसो कम मांशपेशी वृद्धि, एमोनिया, 
+								नाइट्रो कम्पाउन्ड जस्ता ग्याँस वृद्धि रोक्दछ जसबाट खोरमा दुर्गन्ध कम हुन्छ, 
+								प्राणीहरुमा छरितोपन ल्याउँछ, अन्य औषधि तथा रसायनको प्रयोगबाट हुने नकारात्मक असर न्युनिकरण गर्दछ ।
 							</p>
 							<div class="btn-wrap">
 								<a href="single.html">read more</a>
