--- a/products.html
+++ b/products.html
@@ -149,8 +149,10 @@
 						<div class="dtls">
 							<a href="single.html">growth promoter</a>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								विभिन्न मल तथा रसायनको प्रयोगबाट माटो तथा विरुवामा सुधार भएको छैन भने
+								यस Chito Plus को प्रयोगबाट मलखादको उपयोगितालाई विरुवा तथा माटोमा वृद्धि गर्न सकिन्छ । 
+								यसको प्रयोगबाट जुनसुकै विरुवा छिटो हुर्काउन गुणस्तरीय उत्पादन लिन, रोग प्रतिशोधात्मक क्षमता वृद्धि गर्न माटोको गुणस्तर बढाउन,
+								शत्रु जीव व्यवस्थापन गर्न, विरुवाको आन्तरिक प्रणाली दुरुस्त राख्न यसले मद्दत गर्दछ ।
 							</p>
 							<div class="btn-wrap">
 								<a href="single.html">read more</a>
