--- a/products.html
+++ b/products.html
@@ -170,8 +170,9 @@
 						<div class="dtls">
 							<a href="single.html">water treatment</a>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								Chito Plus को यो उत्पादन पानीको उपचार गर्न विशेष रुपमा तयार पारिएके छ । 
+								यसले विभिन्न पानी पोखरीमा पानीको उचित तवरले वातावरणीय प्रणाली सुचारु भूमिका निभाउँदछ । 
+								प्राकृतिक रुपमा पानीलाई विना कुनै रसायनको प्रयोग यस उत्पादनले सफा गर्न सकिन्छ ।
 							</p>
 							<div class="btn-wrap">
 								<a href="single.html">read more</a>
