--- a/single.html
+++ b/single.html
@@ -128,11 +128,20 @@
 						</p>
 					
 						<ul class="ingrednt">
-							<h4>Advantages</h4>
-							<li>suppliment1</li>
-							<li>suppliment2</li>
-							<li>suppliment3</li>
-							<li>suppliment4</li>
+							<h4>पशुहरुमा प्रयोग विधि</h4>
+							<li>१ लि. पानी बराबार १ मि.लि. Chito Plus  राम्ररी घोल्ने र खुवाउने अथवा</li>
+							<li>१० मि.लि. Chito Plus राम्ररी पानीमा घोल्ने र २५ केजी दाना÷खानामा मिसाउने,  केहीबेर छायाँमा सुकाउने अनि खुवाउने ।/li>
+						</ul>
+						<ul class="ingrednt">
+							<h4>पन्छीहरुमा प्रयोग विधि</h4>
+							<li>१ लि. पानी बराबर १ मि.लि. Chito Plus राम्ररी घोल्ने र खुवाउने अथवा</li>
+							<li>१० मि.लि. Chito Plus पानीमा राम्ररी घोल्ने र २५ केजीदाना÷खानामा मिसाउनुहोस् । 
+								केहीबेर छायाँमा सुकाउनुहोस्अनि खुवाउनुहोस् ।</li>
+						</ul>
+						<ul class="ingrednt">
+							<h4>माछाहरुमा प्रयोग विधि</h4>
+							<li>२० मि.लि. Chito Plus पानीमा राम्ररी घोल्ने र बढिमा २५ केजी दाना÷खानामा मिसाउने, 
+								केहीबेर छायाँमा सुकाउने अनि खुवाउनुहोस् ।</li>
 						</ul>
 					</div>
 				</div>
