--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="img-wrap">
-						<img src="assets_front/images/product33.png">
+						<img src="assets_front/images/big.png">
 					</div>
 				</div>
 			</div>
