--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 								शत्रु जीव व्यवस्थापन गर्न, विरुवाको आन्तरिक प्रणाली दुरुस्त राख्न यसले मद्दत गर्दछ ।
 							</p>
 							<div class="btn-wrap">
-								<a href="single.html">read more</a>
+								<a href="product2.html">read more</a>
 							</div>
 						</div>
 					</div>
