--- a/product2.html
+++ b/product2.html
@@ -119,7 +119,7 @@
 					<div class="food-dtl">
 						<h3>growth promoter</h3>
 						<div class="f-price">
-							<strong>rs 1200</strong>
+							<strong>MRP 1050/-</strong>
 						</div>
 						<p>
 							Grow Active Chitosan is a special formula developed for the benefit of farmers and anyone who loves planting. Formulated with high concentration of our high purity food grade chitosan. It can be used with commercial crops, ornamental plants and fruit trees. It promotes disease resistance in plants and helps to condition soil.
