--- a/product2.html
+++ b/product2.html
@@ -180,7 +180,18 @@
 							   </tr>
 							  </tbody>
 							</table>
-						</div>
+					<ul class="ingrednt">
+							<h4>Advantages</h4>
+							<li>Helps condition the soil for planting</li>
+							<li>Strengthen the roots</li>
+							<li>Controlled release of minerals and nutrients to the plant</li>
+							<li>Used for coating seeds to improve germination</li>
+							<li>Stimulate plant growth and reduces usage of fertilizers</li>
+							<li>Increases strength and resistance to diseases. Suppresses plant diseases, such as viral, bacterial and fungal diseases</li>
+							<li>GrowActive Chitosan is a powerful Cation which is 100% Natural and Non-Toxic</li>
+							<li>Increase growth and yield of crops</li>
+
+						</ul>	</div>
 					</div>
 				</div>
 				<div class="col-lg-4">
