--- a/product2.html
+++ b/product2.html
@@ -181,16 +181,36 @@
 							  </tbody>
 							</table>
 					<ul class="ingrednt">
-							<h4>Advantages</h4>
-							<li>Helps condition the soil for planting</li>
-							<li>Strengthen the roots</li>
-							<li>Controlled release of minerals and nutrients to the plant</li>
-							<li>Used for coating seeds to improve germination</li>
-							<li>Stimulate plant growth and reduces usage of fertilizers</li>
-							<li>Increases strength and resistance to diseases. Suppresses plant diseases, such as viral, bacterial and fungal diseases</li>
-							<li>GrowActive Chitosan is a powerful Cation which is 100% Natural and Non-Toxic</li>
-							<li>Increase growth and yield of crops</li>
-
+							<h4> समस्याहरूमा कसरी प्रयोग गर्ने बारे विस्तृत जानकारी</h4>
+							<li>नोट:- सम्पूर्ण प्रयोग विधि प्रति हेक्टर मापदण्डको लागि हो</li>
+							<li> 🍅टमाटर: भाइरल रोग (४-५ लिटर/हे, स्प्रे गर्ने), लेट ब्लाइट (१-२ लिटर/हे, स्प्रे गर्ने), जरा गाँठो नेमाटोड (१७-२३ लिटर/हे, पानीमा मिसाई सिँचाइ), ग्रे मोल्ड (८ लिटर/हे, स्प्रे गर्ने)  , वृद्धि नियमन (१ लिटर/हे, स्प्रे गर्ने), र ब्याक्टेरियल विल्ट (२ लिटर/टन, पानीमा मिसाई सिँचाइ)।</li>
+							<li>🥒काक्रो: रुट नट नेमाटोड (१४-१९ लिटर/हे, पानीमा मिसाई सिँचाइ), विल्ट रोग (३-५ लिटर/हेक्टर, स्प्रे गर्ने), पाउडर फफूंदी (२.५-३ लिटर/हेक्टर, स्प्रे गर्ने), डाउनी फफूंदी (२ लिटर/हेक्टर, स्प्रे गर्ने),  ब्याक्टेरिया एंगुलर स्पट रोग (२.५-३ लिटर/हेक्टर, स्प्रे गर्ने)</li>
+							<li>☕कफी रूख: पात दाग रोग (४-५ लिटर/टन पानीमा, स्प्रे गर्ने/ छर्कने)</li>
+							<li> 🌹गुलाबको फूल: एन्थ्र्याक्स (५-८ लिटर/टन पानी, स्प्रे गर्ने)</li>
+							<li>🎍कुरिलो: स्टेम ब्लाइट (२ लिटर/हे, स्प्रे गर्ने)</li>
+							<li>🍉तरबूज: Fusarium wilt (३-५ लिटर/हे, स्प्रे गर्ने), पाउडर फफूंदी (२ लिटर/हे, स्प्रे गर्ने)</li>
+							<li> 🚬तंबाकू: भाइरल रोग (२-५ लि/हे, स्प्रे गर्ने / छर्कने )</li>
+						        <li>🍠तरुल: जरा गाँठ नेमाटोड (१७-२३ लि/हे, पानीमा मिसाई सिँचाइ)</li>
+						        <li>🌾धान: चामलको विस्फोट, कालो पट्टी बौना रोग, ब्लाइट, भाइरस रोग (२-५ लिटर/हेक्टर, स्प्रे गर्ने/छर्किने)</li>
+						        <li>🧶कपास: Fusarium wilt र Verticillium wilt (२.५-५ लि/हे, स्प्रे गर्ने)</li>
+						        <li>🥬सलाद: नरम सड्ने रोग (२ लिटर/हेक्टर, स्प्रे गर्ने)</li>
+						        <li>🍇अंगूर: डाउनी फफूंदी, नियमित वृद्धि (८-१३ लिटर / टन पानी, स्प्रे गर्ने)</li>
+						        <li>🍎स्याउ: दाग पात रोग (१३-१५ लिटर/ टन पानीमा, स्प्रे गर्ने/ छर्किने)</li>
+						        <li>🥔आलु: भाइरल रोग (२-५ लिटर/हेक्टर, स्प्रे गर्ने), कालो दाग रोग (१०० मिलि/१०० किलो बीउ मिसाएर)</li>
+						        <li>🥭आँपका रूखहरू: वृद्धि नियमित गर्ने (२० लिटर/टन पानीमा, स्प्रे गर्ने)</li>
+						        <li>जिन्सेङ: वृद्धि नियमित गर्न (१-२ लिटर / हेक्टर, स्प्रे गर्ने/छर्किने), रोग (५ लिटर / टन पानीमा, स्प्रे गर्ने/छर्किने)</li>
+						        <li>🌾गहुँ: Fusarium हेड ब्लाइट (५ लिटर/हे, स्प्रे गर्ने)</li>
+						        <li>🍐नाशपातीको रूख: कालो धब्बा रोग (२५ लिटर/ टन पानीमा , स्प्रे गर्ने/छर्किने)</li>
+						        <li>🌽मकै: नराम्रो संकुचन रोग (५ लिटर प्रति हेक्टर, स्प्रे गर्ने)</li>
+						        <li>🫐बयर/ जुजुब रूख: कालो दाग रोग (२० लिटर / टन पानी, स्प्रे गर्ने/छर्किने)</li>
+						        <li>🍋🍊सिट्रस (कागती/सुन्तला/भोगटे/जुनार आदि): क्यान्सर रोग (११-१३ लिटर / टन पानीमा, स्प्रे गर्ने)</li>
+						        <li>🥬बन्दकोबी: नरम सड्ने रोग (२.५-५ लिटर/हेक्टर, स्प्रे गर्ने)</li>
+						        <li> खुर्सानी मिर्च: भाइरल रोग (२ लिटर/ हेक्टर, स्प्रे गर्ने)</li>
+						        <li>🥜बदाम: भाइरल रोग (२.५ लिटर / 100 किलो, बीउ संग मिसाउने)</li>
+						        <li>🌰कटुस र 🫐Schisandra chinensis रूखहरू: पाउडर फफूंदी (५-८ लिटर/टन पानीमा, स्प्रे गर्ने)</li>
+						        <li>🍒चेरी रूख: खैरो दाग रोग (५-८ लिटर/ टन पानीमा, स्प्रे गर्ने)</li>
+						        <li>🍓स्ट्रबेरी: पाउडर फफूंदी (५ लिटर/हे, स्प्रे गर्ने)</li>
+						             
 						</ul>	</div>
 					</div>
 				</div>
