--- a/single.html
+++ b/single.html
@@ -88,7 +88,7 @@
 										<a href="about.html">about</a>
 									</li>
 									<li class="menu-item">
-										<a href="products.html  active">products</a>
+										<a href="products.html">active">products</a>
 									</li>
 									<li class="menu-item">
 										<a href="contact.html">contact us</a>
