--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 								प्राकृतिक रुपमा पानीलाई विना कुनै रसायनको प्रयोग यस उत्पादनले सफा गर्न सकिन्छ ।
 							</p>
 							<div class="btn-wrap">
-								<a href="single.html">read more</a>
+								<a href="single2.html">read more</a>
 							</div>
 						</div>
 					</div>
