--- a/single2.html
+++ b/single2.html
@@ -117,14 +117,13 @@
 			<div class="row align-items-center">
 				<div class="col-lg-8">
 					<div class="food-dtl">
-						<h3>Dietary Feed Suppliement</h3>
+						<h3>Chitosan Enhancing Solution</h3>
 						<div class="f-price">
-							<strong>MRP 1050/-</strong>
+							<strong>MRP 1210/-</strong>
 						</div>
 						<p>
-							उपयोगिताः उत्पादन लागत र समयमा सुधार गर्दछ, रोग प्रतिरोध शक्ति वृद्धि, पशुपन्छी पाचन प्रणालि मजबुट बनाउँछ, 
-							रगतमा चिल्लोको मात्रा कम भई बोसो कम मांशपेशी वृद्धि, एमोनिया, नाइट्रो कम्पाउन्ड जस्ता ग्याँस वृद्धि रोक्दछ जसबाट खोरमा दुर्गन्ध कम हुन्छ,
-							प्राणीहरुमा छरितोपन ल्याउँछ, अन्य औषधि तथा रसायनको प्रयोगबाट हुने नकारात्मक असर न्युनिकरण गर्दछ ।
+							उपयोगिताः  यसले विभिन्न पानी पोखरीमा पानीको उचित तवरले वातावरणीय प्रणाली सुचारु भूमिका निभाउँदछ । 
+							प्राकृतिक रुपमा पानीलाई विना कुनै रसायनको प्रयोग यस उत्पादनले सफा गर्न सकिन्छ ।
 						</p>
 					
 						<ul class="ingrednt">
