--- a/single2.html
+++ b/single2.html
@@ -117,7 +117,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-8">
 					<div class="food-dtl">
-						<h3>Chitosan Enhancing Solution</h3>
+						<h3>Chitosan Water Purifier</h3>
 						<div class="f-price">
 							<strong>MRP 1210/-</strong>
 						</div>
