--- a/single2.html
+++ b/single2.html
@@ -127,9 +127,10 @@
 						</p>
 					
 						<ul class="ingrednt">
-							<h4>पशुहरुमा प्रयोग विधि</h4>
-							<li>१ लि. पानी बराबार १ मि.लि. Chito Plus  राम्ररी घोल्ने र खुवाउने अथवा</li>
-							<li>१० मि.लि. Chito Plus राम्ररी पानीमा घोल्ने र २५ केजी दाना÷खानामा मिसाउने,  केहीबेर छायाँमा सुकाउने अनि खुवाउने ।/li>
+							<h4>माछा पोखरिमा प्रयोग विधि</h4>
+							<li>३०० मि. लि. Chito Plus १०० लि. पानीमा राम्ररी घोल्नुहोस् र १ रोपनी क्षेत्रफलको माछा पोखरिमा चारैतिरबाट राम्ररी पोखरिको पानीमा छर्किदिनुहोस् ।</li>
+							<li>पानीको अवस्था हेरेर १० देखी ३० दिनको अवधिमा फेरी छर्कने कार्य दोहोर्याउनु पर्दछ ।/li>
+							<li>यसको प्रयोग पछी पोखरिको पानी केही समय चलाउने गर्नुपर्दछ । यसो गर्नाले छिटो नतिजा प्राप्त हुन्छ ।/li>
 						</ul>
 						<ul class="ingrednt">
 							<h4>पन्छीहरुमा प्रयोग विधि</h4>
