--- a/single2.html
+++ b/single2.html
@@ -129,14 +129,14 @@
 						<ul class="ingrednt">
 							<h4>माछा पोखरिमा प्रयोग विधि</h4>
 							<li>३०० मि. लि. Chito Plus १०० लि. पानीमा राम्ररी घोल्नुहोस् र १ रोपनी क्षेत्रफलको माछा पोखरिमा चारैतिरबाट राम्ररी पोखरिको पानीमा छर्किदिनुहोस् ।</li>
-							<li>पानीको अवस्था हेरेर १० देखी ३० दिनको अवधिमा फेरी छर्कने कार्य दोहोर्याउनु पर्दछ ।/li>
-							<li>यसको प्रयोग पछी पोखरिको पानी केही समय चलाउने गर्नुपर्दछ । यसो गर्नाले छिटो नतिजा प्राप्त हुन्छ ।/li>
+							<li>पानीको अवस्था हेरेर १० देखी ३० दिनको अवधिमा फेरी छर्कने कार्य दोहोर्याउनु पर्दछ ।</li>
+							<li>यसको प्रयोग पछी पोखरिको पानी केही समय चलाउने गर्नुपर्दछ । यसो गर्नाले छिटो नतिजा प्राप्त हुन्छ ।</li>
 						</ul>
 						<ul class="ingrednt">
-							<h4>पन्छीहरुमा प्रयोग विधि</h4>
-							<li>१ लि. पानी बराबर १ मि.लि. Chito Plus राम्ररी घोल्ने र खुवाउने अथवा</li>
-							<li>१० मि.लि. Chito Plus पानीमा राम्ररी घोल्ने र २५ केजीदाना÷खानामा मिसाउनुहोस् । 
-								केहीबेर छायाँमा सुकाउनुहोस्अनि खुवाउनुहोस् ।</li>
+							<h4>स्विमिङ पुल तथा स्पामा प्रयोग विधि</h4>
+							<li>हप्तामा एक पटक ३०० मि. लि.Chito Plus ४० हजार लिटर पानी सफा गर्न प्रयोग गर्नुपर्दछ ।</li>
+							<li>धमिलो पानी भएमा : हप्तामा एकपटक ६००-९०० मि. लि.Chito Plus ४० हजार लिटर पानी सफा गर्नको लागि प्रयोग गर्नुपर्दछ ।</li>
+							<li>यसको प्रयोग पश्चात ६ देखी ८ घण्टा सम्म पानीको पुल फिल्टर चलाऊनु पर्दछ ।</li>
 						</ul>
 						<ul class="ingrednt">
 							<h4>माछाहरुमा प्रयोग विधि</h4>
