--- a/single2.html
+++ b/single2.html
@@ -139,9 +139,9 @@
 							<li>यसको प्रयोग पश्चात ६ देखी ८ घण्टा सम्म पानीको पुल फिल्टर चलाऊनु पर्दछ ।</li>
 						</ul>
 						<ul class="ingrednt">
-							<h4>माछाहरुमा प्रयोग विधि</h4>
-							<li>२० मि.लि. Chito Plus पानीमा राम्ररी घोल्ने र बढिमा २५ केजी दाना÷खानामा मिसाउने, 
-								केहीबेर छायाँमा सुकाउने अनि खुवाउनुहोस् ।</li>
+							<h4>स्विमिङ पुल तथा स्पामा यसले गर्ने कार्य </h4>
+							<li>पानीबाट तेल, लोसन, साबुन, फोहोर तथा गन्ध हताउछ । प्राकृतिक भएकाले मानिस तथा जिवलाई हानी गर्दैन । बिभिन्न गर्हुँगो धातु जस्तै:- तामा, फलामको कणहरुलाई एकिक्रित जम्मा गरेर सफा गर्न सजिलो बनाउँछ ।
+								पानी छिटो फिल्टर गर्न सहयोग गरी समय र लागत घटाउँछ ।</li>
 						</ul>
 					</div>
 				</div>
