--- a/single2.html
+++ b/single2.html
@@ -124,6 +124,17 @@
 						<p>
 							उपयोगिताः  यसले विभिन्न पानी पोखरीमा पानीको उचित तवरले वातावरणीय प्रणाली सुचारु भूमिका निभाउँदछ । 
 							प्राकृतिक रुपमा पानीलाई विना कुनै रसायनको प्रयोग यस उत्पादनले सफा गर्न सकिन्छ ।
+							</ul>
+						<ul class="ingrednt">
+							<li>पानीको प्राकृतिक स्वरुप फिर्ता ल्याउदँछ,</li>
+							<li>पानीको गुणस्तर बधाउँदछ,</li>
+							<li>लेउ तथा झारहरुबाट हुने क्षतिको न्युनिकरण तथा ब्यवस्थापन गर्दछ,</li>
+							<li>पोखरिमा माछाको प्राकृतिक आहारा निर्माण गर्न सहयोग गर्दछ,</li>
+							<li>पोखरिको पानीमा बिभिन्न रासायनिक दुश्प्रभावमा कमी ल्याउँछ,</li>
+							<li>पानीमा लाग्ने फंगल, ढुसी जस्ता सुक्ष्म शत्रु जीवाणुको समस्या हटाउँछ,</li>
+							<li>पानीबाट चिल्लो तथा धातु अलग गर्दछ</li>
+							<li>माछा तथा अन्य जलचर जिवको लागि स्वच्छ पानीको निर्माण गर्दछ ।</li>
+						</ul>
 						</p>
 					
 						<ul class="ingrednt">
