--- a/product2.html
+++ b/product2.html
@@ -28,7 +28,7 @@
 					<div class="col-lg-2 col-md-3">
 						<div class="logo-wrap">
 							<a href="index.html">
-								<img src="assets_front./images/OB.jpg">
+								<img src="assets_front/images/OB.jpg">
 							</a>			
 						</div>
 					</div>
